# hlm_web

./: .gitignore  README.md  docker-compose.yaml  hlm_server.service  run_dev.sh
backend/: Dockerfile  main.py  requirements.txt  utils.py
backend/.configs/: current.cfg  default.cfg  test_catalog.json
backend/nodes/: CMakeLists.txt  camera_.py  config_manager_.py  constants.py  core.py  file_manager_.py  logger_.py  lux_.py  network_manager_.py  ostx_decoder_.py  postprocess_.py  rec  rec.cpp  rt_.py  utils.py  wifi_.py
backend/routes/: camera_feed.py  config_editor.py  config_manager.py  logger_view.py  lux_meter.py  recorder.py  records_browser.py
frontend/: .env  Dockerfile  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.jsx  Config.jsx  Home.jsx  LiveFeed.jsx  RecordingsBrowser.jsx  index.css  index.js
frontend/src/components/: CameraFeed.jsx  LoggerFeed.jsx  LuxSensors.jsx  RecordingsBrowser.jsx  TestCatalog.jsx
frontend/src/config_files/: config.js  config.jsss
frontend/src/styles/: browser_style.js  config.css  config_style.js  global.css  home_style.js  sensor_style.js
frontend/src/views/: LuxSensorsView.jsx
